WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293584
Manually assigning a file to input.files renders incorrect file name
https://bugs.webkit.org/show_bug.cgi?id=293584
Summary
Manually assigning a file to input.files renders incorrect file name
Luke Warlow
Reported
2025-05-26 07:54:11 PDT
If you manually assign input.files in Chromium and Firefox it will render the file name correctly, but if you do this in WebKit it renders "com.apple.WebKit.WebContent.xpc" as the file name. See
https://jsfiddle.net/3d4g0wkq/
when you click the button labeled "Do the thing", the file name updates with the odd file name. The same thing in Firefox shows "hello.txt"
Attachments
Add attachment
proposed patch, testcase, etc.
Luke Warlow
Comment 1
2025-05-26 08:57:38 PDT
Unable to replicate on iOS simulator, or WebKit GTK so this seems to be a macOS specific bug.
Radar WebKit Bug Importer
Comment 2
2025-05-26 11:43:03 PDT
<
rdar://problem/152048377
>
Aditya Keerthi
Comment 3
2025-05-27 10:21:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45946
EWS
Comment 4
2025-05-27 13:02:56 PDT
Committed
295458@main
(17316658e8a0): <
https://commits.webkit.org/295458@main
> Reviewed commits have been landed. Closing PR #45946 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug