[macOS] Manually assigning a file to input.files renders incorrect file name https://bugs.webkit.org/show_bug.cgi?id=293584 rdar://152048377

Reviewed by Simon Fraser and Abrar Rahman Protyasha.

When a `File` is created programmatically, it has no "path".
`-[NSFileManager displayNameAtPath:]` returns a non-sensical value when
an empty path is passed in, resulting the issue described in the title.

Fix by falling back to the filename if the path is empty.

No new tests since the displayed file name is only "exposed" at paint time,
and it is not possible to make a reference without having this fix.

* Source/WebCore/rendering/mac/RenderThemeMac.mm:
(WebCore::RenderThemeMac::fileListNameForWidth const):

Canonical link: https://commits.webkit.org/295458@main